# deformetrica_code

./: CMakeLists.txt  DeformetricaConfig.h.in  Dockerfile  LICENSE.txt  README.md  README_deformetrica.md
benchmark/: BenchmarkKernels.cxx  CMakeLists.txt
doc/design/: stylesheet.css
lib/ThreadPool/: ThreadPool.h
lib/cuda_convolutions/: GpuConv1D.cu  GpuConv1D.h  GpuConv2D.cu  GpuConv2D.h  ScalarRadialKernel.h
src/core/estimators/: AbstractEstimator.cxx  AbstractEstimator.h  FastGradientAscent.cxx  FastGradientAscent.h  GradientAscent.cxx  GradientAscent.h  McmcSaem.cxx  McmcSaem.h  PowellsMethod.cxx  PowellsMethod.h
src/core/models/: AbstractStatisticalModel.cxx  AbstractStatisticalModel.h
src/io/: DataInterface.h  DataSet.cxx  DataSet.h  DeformableObjectParameters.cxx  DeformableObjectParameters.h  DeformableObjectParametersXMLFile.cxx  DeformableObjectParametersXMLFile.h  DeformableObjectReader.cxx  DeformableObjectReader.h  DeformationFieldIO.cxx  DeformationFieldIO.h  MatrixDLM.cxx  MatrixDLM.h  SparseDiffeoParameters.cxx  SparseDiffeoParameters.h  SparseDiffeoParametersXMLFile.cxx  SparseDiffeoParametersXMLFile.h  SparseDiffeoWriter.cxx  SparseDiffeoWriter.h  XmlConfigurationConverter.cxx  XmlConfigurationConverter.h  XmlDataSet.hpp  XmlDictionary.hpp
src/launch/: deformetrica.cxx  deformetrica.h
src/launch/abc/: abc_sampling.cxx
src/launch/atlas/: estimate_atlas.cxx  estimate_atlas.h
src/launch/deformation/: CreateDeformationField.cxx
src/launch/longitudinal_atlas/: estimate_longitudinal_atlas.cxx  estimate_longitudinal_atlas.h
src/launch/longitudinal_registration/: estimate_longitudinal_registration.cxx  estimate_longitudinal_registration.h
src/launch/parallel_transport/: parallel_transport.cxx  parallel_transport.h
src/launch/regression/: estimate_geodesic_regression.cxx  estimate_geodesic_regression.h
src/launch/shooting/: deform.cxx  deform.h
src/support/fast_math/: MathFunctions.h
src/support/kernels/: AbstractKernel.cxx  AbstractKernel.h  CUDAExactKernel.cxx  CUDAExactKernel.h  Compact.cxx  Compact.h  ExactKernel.cxx  ExactKernel.h  KernelFactory.cxx  KernelFactory.h  KernelType.h  P3MKernel.cxx  P3MKernel.h
src/support/linear_algebra/: ArmadilloMatrixWrapper.cxx  ArmadilloMatrixWrapper.h  ArmadilloVectorWrapper.cxx  ArmadilloVectorWrapper.h  LinearAlgebra.h  LinearVariableMapWrapper.cxx  LinearVariableMapWrapper.h  LinearVariableVariantVisitors.h  LinearVariableWrapper.cxx  LinearVariableWrapper.h  LinearVariablesMapWrapper.cxx  LinearVariablesMapWrapper.h  (+4 more)
tests/: CMakeLists.txt  RunTests.cxx
tests/functional_tests/: TestFunctional.cxx  TestFunctional.h  configure.ini
tests/functional_tests/atlas/image/2d/digits/: data_set.xml  model.xml  optimization_parameters.xml
tests/functional_tests/atlas/landmark/2d/parabola/: data_set.xml  model.xml  optimization_parameters.xml
tests/functional_tests/atlas/landmark/2d/parabola/data/: 1-meantemplate.vtk  1-subject1.vtk  1-subject2.vtk  1-subject3.vtk  2-meantemplate.vtk  2-subject1.vtk  2-subject2.vtk  2-subject3.vtk
tests/functional_tests/atlas/landmark/3d/banana/: data_set.xml  model.xml  optimization_parameters.xml
tests/functional_tests/atlas/landmark/3d/banana/data/: template.vtk
tests/functional_tests/atlas/landmark/3d/brain_structures/: data_set.xml  model.xml  optimization_parameters.xml
tests/functional_tests/atlas/landmark/3d/brain_structures/data/: hippo_prototype_template.vtk
tests/functional_tests/registration/image/2d/snowman/: launch_simulation.sh  model.xml  optimization_parameters.xml
tests/functional_tests/registration/landmark/2d/skulls/: model.xml  optimization_parameters.xml
tests/functional_tests/registration/landmark/3d/amygdalas/: optimization_parameters.xml
tests/functional_tests/registration/landmark/3d/amygdalas/data/: decimatedAmygdala2.vtk
tests/functional_tests/regression/landmark/2d/skulls/: data_set.xml  launch_simulation.sh  model.xml  optimization_parameters.xml
tests/unit_tests/geometries/: TestVolumeGradient.cxx  TestVolumeGradient.h
tests/unit_tests/geometries/data/: SimpleSurfaceSquare.vtk  SimpleVolumeCube.vtk  VolumeBall.vtk  VolumeCube.vtk  VolumeDisk.vtk  VolumeSquare.vtk
tests/unit_tests/io/: TestReadConfiguration.cxx  TestReadConfiguration.h  TestReadParametersXML.cxx  TestReadParametersXML.h
tests/unit_tests/io/data/: paramDiffeos.xml  paramSurface.xml
tests/unit_tests/io/data/atlas_3d/: data_set.xml  model.xml  optimization_parameters.xml
tests/unit_tests/io/data/conf/: data_set.xml
tests/unit_tests/io/data/generic_multiple_objects_and_subjects/: data_set.xml  model.xml
tests/unit_tests/io/data/sparse_atlas/: data_set.xml  model.xml  optimization_parameters.xml  paramDiffeos.xml
tests/unit_tests/io/data/sparse_atlas/Bundle_Left_Cortico_Putamen/: param_cortico_putamen_1002.xml
tests/unit_tests/io/data/sparse_atlas/Left_Putamen/: param_putamen.xml
tests/unit_tests/kernels/: AbstractTestKernelPrecision.cxx  AbstractTestKernelPrecision.h  TestKernelPrecisionCUDA.cxx  TestKernelPrecisionCUDA.h  TestKernelPrecisionP3M.cxx  TestKernelPrecisionP3M.h
tests/unit_tests/linear_algebra/: TestBoostWrappers.cxx  TestBoostWrappers.h  TestFloat.cxx  TestFloat.h
tests/unit_tests/linear_algebra/data/: testVector.txt
tests/unit_tests/parallel-transport/: TestParallelTransport.cxx  TestParallelTransport.h
tests/unit_tests/programs/: CMakeLists.txt  TestAnatomicalCoordinateSystem.cxx  TestVectorizeImage.cxx
tests/unit_tests/serialize/: TestSerialization.cxx  TestSerialization.h
utilities/c++/: CMakeLists.txt  ComputeCurrentDistance.cpp  ComputeDeformationDistance.cxx  ComputeImageDistance.cpp  ComputeVarifoldDistance.cpp  DecimateMesh.cpp  InspectSerialization.cpp  MapsEllipsoid.cxx  MapsEllipsoidWithSource.cxx  ReorientMeshNormals.cpp  SimulateLdaAtlas.cpp  SimulateLongitudinalData.cpp  SmoothMesh.cpp
utilities/meshes/: sphere3200.vtk
utilities/python/: computeDiceDistance.py  computeL2Distance.py  generateImages.py  generateMeshes.py  generateXMLs.py  plotVolumeEvolutionForRegression.py  reorientMesh.py
(+200 files in other folders)
